k8s-tests/chainsaw/deployment-policy/overlapping-selectors/skyhook.yaml
# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: skyhook.nvidia.com/v1alpha1
kind: Skyhook
metadata:
  name: overlapping-selectors-test
spec:
  deploymentPolicy: overlapping-selector-policy
  
  nodeSelectors:
    matchLabels:
      skyhook.nvidia.com/test-node: skyhooke2e
  
  packages:
    test-package:
      version: "6.2.0"
      image: ghcr.io/nvidia/skyhook/agentless
      env:
        - name: SLEEP_LEN
          value: "2"
